<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/marshmellow">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodfix"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textColor="#444"
            android:textStyle="italic"
            android:layout_margin="30dp"
            android:id="@+id/textView"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_nomber"
            android:textColor="#42474b "
            android:singleLine="true"
            android:paddingLeft="15dp"
            android:textColorHint="#42474b"
            android:inputType="phone"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="#42474b "
            android:paddingLeft="15dp"
            android:hint="@string/password"
            android:textColorHint="#42474b"/>

        <Button android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/exit"/>

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="#42474b "
            android:textSize="20dip" />

    </LinearLayout>

</RelativeLayout>